<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jitsi</string>
    <string name="ACCOUNT_TYPE">org.jitsi.android.account</string>
    <string name="send_process_signal">Send Process Signal</string>
    <string name="stop_osgi_framework">Stop OSGi Framework</string>
    <string name="call">Call</string>
    <string name="in_call_with">In call with </string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="username_label">Username:</string>
    <string name="password">password</string>
    <string name="password_label">Password:</string>
    <string name="store_password">Remember password</string>
    <string name="sign_in">Sign in</string>
    <string name="network">Network</string>
    <string name="choose_network">Choose a network</string>
    <string-array name="networks_array">
        <item name="sip">SIP</item>
        <item name="xmpp">Jabber</item>
    </string-array>
    <string name="enter_name_or_number">Enter name or number</string>
    <string name="hang_up">Hang up call</string>
    <string name="accept_call_video">Answer call with video</string>
    <string name="hold">Put call on hold</string>
    <string name="show_call_info">Call info</string>
    <string name="show_call_zrtp_info">"Call ZRTP info</string>
    <string name="video_resolution">Video resolution</string>
    <string name="low_video_resolution">320x240</string>
    <string name="high_video_resolution">640x480</string>
    <string name="exit_app">Exit</string>

    <!-- Main Menu items -->
    <string name="service_gui_ACCOUNTS_STATUS">Accounts status</string>
    <string name="service_gui_ACCOUNTS_SETTINGS">Accounts settings</string>
    
    <!-- Sign in -->
    <string name="service_gui_SIGN_IN">Sign in</string>
    <string name="service_gui_SIGN_OUT">Sign out</string>
    <string name="service_gui_CREATE_ACCOUNT">Create account</string>
    <string name="service_gui_LOGIN_FAILED">
        Login failed
    </string>
    <string name="service_gui_USERNAME_NULL">
        Please fill your username and password.
    </string>
    <string name="service_gui_USER_EXISTS_ERROR">
        This user already exists on the selected network. Please choose another user or network.
    </string>
    <string name="service_gui_SPECIFY_SERVER">
        Please complete the server part of your account.
    </string>
    <string name="service_gui_ACCOUNT_CREATION_FAILED">
        We failed to create your account due to the following error:
    </string>

    <!-- Plugin reconnect -->
    <string name="plugin_reconnectplugin_CONNECTION_FAILED_MSG">
        Connection failed for the following account:\n
        User name: {0}, Server name: {1}.\n
        Please check your settings or contact your network administrator for more information.
    </string>
    <string name="plugin_reconnectplugin_NETWORK_DOWN">
        Network connectivity lost!
    </string>

    <!-- General -->
    <string name="service_gui_CLOSE">Close</string>
    <string name="service_gui_OK">Ok</string>
    <string name="service_gui_CANCEL">Cancel</string>
    <string name="service_gui_SEARCH">Search</string>
    <string name="service_gui_ADD_CONTACT">Add contact</string>
    <string name="service_gui_ONLINE">Online</string>
    <string name="service_gui_RETRY">Retry</string>
    <string name="service_gui_ERROR">Error</string>
    <string name="service.gui.AUTHENTICATION_FAILED">
        Authentication failed for {0}. The password you entered is not valid.
    </string>
    <string name="service_gui_CONNECTION_FAILED_MSG">Connection failed for the
        following account: User name: {0}, Server name: {1}. Please check your
        network connection or contact your network administrator for more
        information.</string>
    <string name="service_gui_NEW_ACCOUNT">Add new account</string>
    <string name="service_gui_LOADING">Loading</string>
    <string name="service_gui_ACCOUNTS">Accounts</string>

    <!-- Call -->
    <string name="service_gui_VOLUME_CONTROL_TOOL_TIP">Adjust volume</string>
    <string name="service_gui_MUTE_BUTTON_TOOL_TIP">Adjust microphone sound</string>
    <string name="service_gui_LOCAL_VIDEO_BUTTON_TOOL_TIP">Toggle video</string>
    <string name="service_gui_SEND_MESSAGE">Send a message</string>

    <!-- Presence status -->
    <string name="service_gui_EDIT_STATUS_MSG_TIP">Set status message</string>
    <string name="service_gui_SET_STATUS">Change status</string>
    <string name="service_gui_PRESENCE_EDIT_TITLE">Presence status {0}</string>
    <string name="service_gui_SELECT_AVATAR">Select new avatar image</string>

    <!-- Call info -->
    <string name="service_gui_callinfo_TECHNICAL_CALL_INFO">Technical Call Info</string>
    <string name="service_gui_callinfo_CALL_INFORMATION">Call information</string>
    <string name="service_gui_callinfo_CALL_IDENTITY">Identity</string>
    <string name="service_gui_callinfo_PEER_COUNT">Participant count</string>
    <string name="service_gui_callinfo_IS_CONFERENCE_FOCUS">Conference focus</string>
    <string name="service_gui_callinfo_IS_DEFAULT_ENCRYPTED">Encryption enabled</string>
    <string name="service_gui_callinfo_CALL_TRANSPORT">Signalling call transport</string>
    <string name="service_gui_callinfo_CALL_DURATION">Call duration</string>
    <string name="service_gui_callinfo_CODEC">Codec / Frequency</string>
    <string name="service_gui_callinfo_NA">N.A.</string>
    <string name="service_gui_callinfo_VIDEO_SIZE">Video size</string>
    <string name="service_gui_callinfo_AUDIO_INFO">Audio info</string>
    <string name="service_gui_callinfo_VIDEO_INFO">Video info</string>
    <string name="service_gui_callinfo_LOCAL_IP">Local IP / Port</string>
    <string name="service_gui_callinfo_REMOTE_IP">Remote IP / Port</string>
    <string name="service_gui_callinfo_BANDWITH">Bandwith</string>
    <string name="service_gui_callinfo_LOSS_RATE">Loss rate</string>
    <string name="service_gui_callinfo_RTT">RTT</string>
    <string name="service_gui_callinfo_JITTER">Jitter</string>
    <string name="service_gui_callinfo_MEDIA_STREAM_TRANSPORT_PROTOCOL">Media stream transport protocol</string>
    <string name="service_gui_callinfo_MEDIA_STREAM_RTP">RTP</string>
    <string name="service_gui_callinfo_MEDIA_STREAM_SRTP">SRTP</string>
    <string name="service_gui_callinfo_KEY_EXCHANGE_PROTOCOL">Key exchange protocol</string>
    <string name="service_gui_callinfo_ICE_CANDIDATE_EXTENDED_TYPE">ICE candidate extended type</string>
    <string name="service_gui_callinfo_ICE_STATE">ICE Processing State</string>
    <string name="service_gui_callinfo_ICE_STATE_WAITING">Gather candidates</string>
    <string name="service_gui_callinfo_ICE_STATE_RUNNING">Connectivity checks</string>
    <string name="service_gui_callinfo_ICE_STATE_COMPLETED">Completed</string>
    <string name="service_gui_callinfo_ICE_STATE_FAILED">Failed</string>
    <string name="service_gui_callinfo_ICE_LOCAL_HOST_ADDRESS">Local host IP / Port</string>
    <string name="service_gui_callinfo_ICE_LOCAL_REFLEXIVE_ADDRESS">Local reflexive IP / Port</string>
    <string name="service_gui_callinfo_ICE_LOCAL_RELAYED_ADDRESS">Local relayed IP / Port</string>
    <string name="service_gui_callinfo_ICE_REMOTE_HOST_ADDRESS">Remote host IP / Port</string>
    <string name="service_gui_callinfo_ICE_REMOTE_REFLEXIVE_ADDRESS">Remote reflexive IP / Port</string>
    <string name="service_gui_callinfo_ICE_REMOTE_RELAYED_ADDRESS">Remote relayed IP / Port</string>
    <string name="service_gui_callinfo_TOTAL_HARVESTING_TIME">Total harvesting time</string>
    <string name="service_gui_callinfo_HARVESTING_TIME">Harvesting time</string>
    <string name="service_gui_callinfo_HARVESTING_MS_FOR">ms (for</string>
    <string name="service_gui_callinfo_HARVESTS">harvests)</string>
    <string name="service_gui_callinfo_DECODED_WITH_FEC">Packets decoded with FEC</string>
    <string name="service_gui_callinfo_DISCARDED_PERCENT">Packets currently being discarded</string>
    <string name="service_gui_callinfo_DISCARDED_TOTAL">Number of discarded packets</string>
    <string name="service_gui_callinfo_ADAPTIVE_JITTER_BUFFER">Adaptive jitter buffer</string>
    <string name="service_gui_callinfo_JITTER_BUFFER_DELAY">Jitter buffer</string>

    <!-- ASecurity info -->
    <string name="service_gui_SECURITY_INFO">Security information</string>
    <string name="service_gui_security_SECURE_AUDIO">Secure audio</string>
    <string name="service_gui_security_AUDIO_NOT_SECURED">Audio not secure</string>
    <string name="service_gui_security_SECURE_VIDEO">Secure video</string>
    <string name="service_gui_security_VIDEO_NOT_SECURED">Video not secure</string>
    <string name="service_gui_security_NO_VIDEO">No video</string>
    <string name="service_gui_security_CIPHER">Cipher: {0}</string>
    <string name="service_gui_security_VERIFY_TOAST">Call security enabled! Tap to compare security string now or use the menu later.</string>
    <string name="service_gui_security_CALL_SECURED_TOOLTIP">Call secured. Fore more information press here.</string>
    <string name="service_gui_security_CALL_NOT_SECURED_TOOLTIP">Call not secure.</string>
    <string name="service_gui_security_CALL_SECURED_COMPARE_TOOLTIP">Press here to compare security secret with your partner.</string>
    <string name="service_gui_security_COMPARE_WITH_PARTNER_SHORT">Compare with partner:</string>
    <string name="service_gui_security_STRING_COMPARED">String compared!</string>
    <string name="service_gui_security_SECURITY_ALERT">Trying to secure call. Will disconnect in</string>
    <string name="service_gui_security_CLEAR_SAS">Clear</string>
    <string name="service_gui_security_CONFIRM_SAS">Confirm</string>
</resources>
