<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add_account"
           android:title="@string/service_gui_NEW_ACCOUNT">
    </item>
    <item android:id="@+id/sign_out"
           android:title="@string/service_gui_SIGN_OUT">
    </item>
    <item android:id="@+id/accounts_status"
          android:title="@string/service_gui_ACCOUNTS_STATUS">
    </item>
    <item android:id="@+id/accounts_settings"
          android:title="@string/service_gui_ACCOUNTS_SETTINGS">
    </item>
    <item android:id="@+id/main_settings"
           android:title="@string/settings">
    </item>
    <item android:id="@+id/video_resolution"
           android:title="@string/video_resolution">
        <menu>
            <item android:id="@+id/low_resolution"
                  android:title="@string/low_video_resolution" />
            <item android:id="@+id/high_resolution"
                  android:title="@string/high_video_resolution" />
        </menu>
    </item>
</menu>
