<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableLayout 
        android:id="@+id/new_account_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TableRow>
            <TextView
                android:id="@+id/networkLabel"
                android:text="@string/network"
                android:textSize="@dimen/label_text_size"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"/>
            <Spinner
                android:id="@+id/networkSpinner"
                android:prompt="@string/choose_network"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="50dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/usernameLabel"
                android:text="@string/username"
                android:textSize="@dimen/label_text_size"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"/>
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:inputType="text"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/paswordLabel"
                android:text="@string/password"
                android:textSize="@dimen/label_text_size"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"/>
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:inputType="textPassword"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/emptyLabel"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/signInButton"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>